--- a/bower.json
+++ b/bower.json
@@ -19,9 +19,9 @@
   "dependencies": {
     "slick-carousel": "^1.6.0",
     "jquery": "^3.1.1",
-    "normalize-css": "^5.0.0",
     "device.js": "devicejs#^0.2.7",
     "jquery-placeholder": "^2.3.1",
-    "jquery-smartresize": "*"
+    "jquery-smartresize": "*",
+    "normalize-css": "normalize.css#^5.0.0"
   }
 }
