--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-cache": "^0.4.5",
     "gulp-concat": "^2.6.1",
     "gulp-concat-css": "^2.3.0",
+    "gulp-csscomb": "^3.0.8",
     "gulp-cssnano": "^2.1.2",
     "gulp-file-include": "^1.0.0",
     "gulp-html-beautify": "^1.0.1",
