--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "device.js": "devicejs#^0.2.7",
     "jquery-placeholder": "^2.3.1",
     "jquery-smartresize": "*",
-    "normalize-css": "normalize.css#^5.0.0"
+    "normalize-css": "normalize.css#^5.0.0",
+    "include-media": "^1.4.9"
   }
 }
