--- a/modernizr-config.json
+++ b/modernizr-config.json
@@ -12,6 +12,8 @@
 		"test/svg",
 		"test/touchevents",
 		"test/css/backgroundsize",
+		"test/css/flexbox",
+		"test/css/flexwrap",
 		"test/css/gradients",
 		"test/css/multiplebgs",
 		"test/css/objectfit",
