--- a/bower.json
+++ b/bower.json
@@ -24,5 +24,8 @@
     "jquery-smartresize": "*",
     "normalize-css": "normalize.css#^5.0.0",
     "include-media": "^1.4.9"
+  },
+  "devDependencies": {
+    "mathsass": "^0.9.5"
   }
 }
