--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "jquery-placeholder": "^2.3.1",
     "jquery-smartresize": "*",
     "normalize-css": "normalize.css#^5.0.0",
-    "include-media": "^1.4.9"
+    "include-media": "^1.4.9",
+    "select2": "^4.0.3"
   },
   "devDependencies": {
     "mathsass": "^0.9.5"
