--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "slick-carousel": "^1.6.0",
     "jquery": "^3.1.1",
     "device.js": "devicejs#^0.2.7",
+    "jquery-form": "^4.2.2",
     "jquery-placeholder": "^2.3.1",
     "jquery-smartresize": "*",
     "normalize-css": "normalize.css#^5.0.0",
