--- a/modernizr-config.json
+++ b/modernizr-config.json
@@ -9,14 +9,6 @@
 		"setClasses"
 	],
 	"feature-detects": [
-		"test/svg",
-		"test/touchevents",
-		"test/css/backgroundsize",
-		"test/css/flexbox",
-		"test/css/flexwrap",
-		"test/css/gradients",
-		"test/css/multiplebgs",
-		"test/css/objectfit",
-		"test/css/transitions"
+		"test/touchevents"
 	]
 }
