--- a/bower.json
+++ b/bower.json
@@ -23,9 +23,9 @@
     "jquery-form": "^4.2.2",
     "jquery-placeholder": "^2.3.1",
     "jquery-smartresize": "*",
-    "normalize-css": "normalize.css#^5.0.0",
     "include-media": "^1.4.9",
-    "select2": "^4.0.3"
+    "select2": "^4.0.3",
+    "normalize-scss": "normalize.scss#^7.0.1"
   },
   "devDependencies": {
     "mathsass": "^0.9.5"
