--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-beautify": "^2.0.1",
     "gulp-cache": "^0.4.5",
     "gulp-concat": "^2.6.1",
     "gulp-concat-css": "^2.3.0",
@@ -22,11 +23,15 @@
     "gulp-file-include": "^1.0.0",
     "gulp-html-beautify": "^1.0.1",
     "gulp-imagemin": "^3.1.1",
+    "gulp-remove-empty-lines": "^0.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-rev-timestamp": "0.0.1",
     "gulp-sass": "^3.1.0",
     "gulp-sass-variables": "^1.1.1",
     "gulp-sourcemaps": "^2.4.0",
     "gulp-string-replace": "^0.4.0",
+    "gulp-strip-comments": "^2.5.2",
+    "gulp-strip-css-comments": "^2.0.0",
     "gulp-uglifyjs": "^0.6.2",
     "imagemin-pngquant": "^5.0.0",
     "markdown": "^0.5.0",
