--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "jquery-smartresize": "*",
     "include-media": "^1.4.9",
     "select2": "^4.0.3",
-    "normalize-scss": "normalize.scss#^7.0.1"
+    "normalize-scss": "normalize.scss#^7.0.1",
+    "jquery-validation": "^1.17.0"
   },
   "devDependencies": {
     "mathsass": "^0.9.5"
